--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="logo-ryzem_task.png" alt="Logo" class="logo">
         </div>
 
-        <h1>Organizador de Tarefas de gabriel</h1>
+        <h1>Organizador de Tarefas</h1>
         
         <input type="text" id="taskInput" class="task-input" placeholder="Adicione uma tarefa" />
         <button class="add-task-button" onclick="addTask()">Adicionar</button>
