--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     
 </head>
 <body>
+
+
     <div class="container">
         <div class="logo-container">
             <img src="logo-ryzem_task.png" alt="Logo" class="logo">
@@ -23,11 +25,16 @@
 
         <input type="text" id="taskInput" class="task-input" placeholder="Adicione uma tarefa" />
         <button class="add-task-button" onclick="addTask()">Adicionar</button>
+        <button class="theme-toggle" onclick="toggleTheme()">Mudar Tema</button>
+
         <div class="contaienr2">
             <ul id="taskList" class="task-list"></ul>
         </div>
        
     </div>
+
+
+
 
     <script src="script.js"></script>
 </body>
