--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
         <div class="contaienr2">
             <ul id="taskList" class="task-list"></ul>
         </div>
-       
-    </div>
 
+<div class="buttonarea">
+
+    
+    <button class="discord"><a href="https://discord.gg/Gyq8n2bdV2"> <img src="icones_imagens/icons8-logo-discord-50 (2).png" alt=""></a></button>
+ 
+
+</div>
+
+    </div>
 
 
 
