--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="buttonarea">
 
     
-    <button class="discord"><a href="https://discord.gg/Gyq8n2bdV2"> <img src="icones_imagens/icons8-logo-discord-50 (2).png" alt=""></a></button>
+    <button class="discord"><a href="https://discord.gg/Gyq8n2bdV2"> <img src="icons8-logo-discord-50 (2).png" alt=""></a></button>
  
 
 </div>
