--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="logo-ryzem_task.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organizador de Tarefas</title>
+    <title>Ryzem Task</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
