--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             <ul id="taskList" class="task-list"></ul>
         </div>
 
+        <a href="login.html"> <button onclick="logout()" class="logout-button">Sair</button>
 
-
+</a>
     </div>
 
 
