--- a/login.html
+++ b/login.html
@@ -12,7 +12,8 @@
         }
 
         body {
-            background-color: white;
+            background-color: rgb(175, 175, 175);
+            color: white;
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
@@ -23,7 +24,10 @@
 
         .login-container {
             text-align: center;
-            max-width: 350px;
+            padding: 30px;
+            border-radius: 25px;
+            max-width: 380px;
+            background-color: rgb(34, 34, 34);
             width: 100%;
         }
 
@@ -45,7 +49,7 @@
         .form-group label {
             display: block;
             margin-bottom: 5px;
-            color: #333;
+            color: #f1f1f1;
             font-weight: bold;
         }
 
